--- a/box_utils/box_auto/CMakeLists.txt
+++ b/box_utils/box_auto/CMakeLists.txt
@@ -101,12 +101,12 @@ target_link_libraries(${PROJECT_NAME}
 add_executable(post_processor_node
   src/post_processor_node.cpp)
 
-add_executable(filter_pointclouds
-  src/filter_pointclouds.cpp)
-
 add_executable(tf_processor_node
   src/tf_processor_node.cpp)
   
+add_executable(filter_lidar_node
+  src/filter_lidar.cpp)
+
 add_executable(merge
   src/merge.cpp)
 
@@ -131,16 +131,15 @@ ${GLOG_LIBRARIES}
 ${PROJECT_NAME}
 )
 
-target_link_libraries(filter_pointclouds 
+target_link_libraries(filter_lidar_node 
 ${catkin_LIBRARIES}
 ${PCL_LIBRARIES}
 ${PROJECT_NAME}
 )
 
-
 find_package(cmake_clang_tools QUIET)
 if(cmake_clang_tools_FOUND)
-  message(STATUS "Run clang tooling for target " post_processor_node)
+  message(STATUS "Run clang tooling for target " post_processor_node filter_lidar_node)
   add_clang_tooling(
     TARGETS post_processor_node
     SOURCE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -161,11 +160,10 @@ RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
-install(TARGETS filter_pointclouds
+install(TARGETS filter_lidar_node
 RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
-
 
 # catkin_install_python(PROGRAMS 
 #   python/scripts/your_script.py
