--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<package format="2">
+<package format="3">
 
   <name>box_auto</name>
   <version>0.1.0</version>
@@ -16,9 +16,10 @@
   <depend>sensor_msgs</depend>
   <depend>pcl_ros</depend>
   <depend>pcl_conversions</depend>
-  <depend>direct_lidar_inertial_odometry</depend>
   <depend>roscpp</depend>
   <depend>roslib</depend>
+  <depend>python-setuptools</depend>
+  <depend>rospy</depend>
   <depend>eigen_conversions</depend>
   <depend>tf2</depend>
   <depend>rosgraph_msgs</depend>
@@ -28,18 +29,19 @@
   <depend>interactive_markers</depend>
   <depend>rosbag</depend>
   <depend>nav_msgs</depend>
-  <depend>raw_image_pipeline_python</depend>
-  <depend>raw_image_pipeline_ros</depend>
-  <depend>novatel_oem7_driver</depend>
-  <depend>hesai_ros_driver</depend>
-  <depend>bringup_hesai</depend>
-  <depend>zed_wrapper</depend>
-  <depend>tf_bag</depend>
-  <depend>atn_position3_fuser</depend>
-  <depend>ap20_driver_ros</depend>
-  <depend>open3d_slam_ros</depend>
-  <depend>python-setuptools</depend>
-  <depend>rospy</depend>
+
+  <!-- To disable 3rd party application building. Set export DEBUG_MODE=1 -->
+  <depend condition="$DEBUG_MODE != 1">direct_lidar_inertial_odometry</depend>
+  <depend condition="$DEBUG_MODE != 1">raw_image_pipeline_python</depend>
+  <depend condition="$DEBUG_MODE != 1">raw_image_pipeline_ros</depend>
+  <depend condition="$DEBUG_MODE != 1">novatel_oem7_driver</depend>
+  <depend condition="$DEBUG_MODE != 1">hesai_ros_driver</depend>
+  <depend condition="$DEBUG_MODE != 1">bringup_hesai</depend>
+  <depend condition="$DEBUG_MODE != 1">zed_wrapper</depend>
+  <depend condition="$DEBUG_MODE != 1">tf_bag</depend>
+  <depend condition="$DEBUG_MODE != 1">atn_position3_fuser</depend>
+  <depend condition="$DEBUG_MODE != 1">ap20_driver_ros</depend>
+  <depend condition="$DEBUG_MODE != 1">open3d_slam_ros</depend>
 
 
 </package>
