--- a/box_applications/colorless_uniform_mapper/CMakeLists.txt
+++ b/box_applications/colorless_uniform_mapper/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(colorless_uniform_mapper)
 
+set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_STANDARD 17)
 #add_compile_options(-Wall -Wextra -Wpedantic)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-add_compile_options(-std=c++17)
+add_compile_options(-Wno-dev -O3 -std=c++17 -fconcepts )
 set(CMAKE_COMPILER_IS_GNUCXX 1)
 
 set(CATKIN_PACKAGE_DEPENDENCIES
