--- a/box_calibration/box_calibration/calibration/allan_variances/alphasense/imu.yaml
+++ b/box_calibration/box_calibration/calibration/allan_variances/alphasense/imu.yaml
@@ -1,10 +1,11 @@
 #Accelerometer
-accelerometer_noise_density: 0.0012593921763625943
-accelerometer_random_walk: 4.317454918100831e-05
+accelerometer_noise_density: 0.0012593921763625943    # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
+accelerometer_random_walk: 4.317454918100831e-05      # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
 
 #Gyroscope
-gyroscope_noise_density: 0.00020202932517334086
-gyroscope_random_walk: 1.8672379701877664e-06
+gyroscope_noise_density: 0.00020202932517334086       # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
+gyroscope_random_walk: 1.8672379701877664e-06         # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
+
 
 rostopic: '/gt_box/alphasense_driver_node/imu' #Make sure this is correct
 update_rate: 200.0 #Make sure this is correct
