--- a/box_calibration/box_calibration/calibration/allan_variances/ap20/imu.yaml
+++ b/box_calibration/box_calibration/calibration/allan_variances/ap20/imu.yaml
@@ -1,10 +1,10 @@
 #Accelerometer
-accelerometer_noise_density: 0.0014051570147523011
-accelerometer_random_walk: 2.389462521335419e-05
+accelerometer_noise_density: 0.0014051570147523011    # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
+accelerometer_random_walk: 2.389462521335419e-05      # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
 
 #Gyroscope
-gyroscope_noise_density: 0.00017808717694266127
-gyroscope_random_walk: 1.6719529569193707e-06
+gyroscope_noise_density: 0.00017808717694266127       # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
+gyroscope_random_walk: 1.6719529569193707e-06         # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
 
 rostopic: '/gt_box/ap20/imu_debug' #Make sure this is correct
 update_rate: 200.0 #Make sure this is correct
