--- a/box_calibration/box_calibration/calibration/allan_variances/cpt7/imu.yaml
+++ b/box_calibration/box_calibration/calibration/allan_variances/cpt7/imu.yaml
@@ -1,11 +1,10 @@
 #Accelerometer
-accelerometer_noise_density: 0.0005928679556103585
-accelerometer_random_walk: 1.9343728437189512e-05
+accelerometer_noise_density: 0.0005928679556103585      # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
+accelerometer_random_walk: 1.9343728437189512e-05       # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
 
 #Gyroscope
-gyroscope_noise_density: 1.1139130517065622e-05
-gyroscope_random_walk: 1.1954327324940076e-07
+gyroscope_noise_density: 1.1139130517065622e-05         # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
+gyroscope_random_walk: 1.1954327324940076e-07           # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
 
 rostopic: '/gt_box/cpt7/imu/data_raw' #Make sure this is correct
 update_rate: 100.0 #Make sure this is correct
-
