--- a/box_calibration/box_calibration/calibration/allan_variances/livox/imu.yaml
+++ b/box_calibration/box_calibration/calibration/allan_variances/livox/imu.yaml
@@ -1,11 +1,10 @@
 #Accelerometer
-accelerometer_noise_density: 0.00011342219135615652
-accelerometer_random_walk: 2.266045767910792e-06
+accelerometer_noise_density: 0.00011342219135615652     # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
+accelerometer_random_walk: 2.266045767910792e-06        # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
 
 #Gyroscope
-gyroscope_noise_density: 8.992407693407532e-05
-gyroscope_random_walk: 4.968451356558349e-06
+gyroscope_noise_density: 8.992407693407532e-05          # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
+gyroscope_random_walk: 4.968451356558349e-06            # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
 
 rostopic: '/gt_box/livox/imu_si_compliant' #Make sure this is correct
 update_rate: 200.0 #Make sure this is correct
-
