--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -128,7 +128,7 @@ services:
   #   - _nuc_alphasense_intrinsics.bag
   imu_intrinsics:
     <<: *common-config
-    container_name: calibration
+    container_name: imu_intrinsics
     command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_imu_intrinsics.py"]
     depends_on:
       calibration:
