--- a/box_utils/box_auto/cfg/evo_evaluation_point_relation.yaml
+++ b/box_utils/box_auto/cfg/evo_evaluation_point_relation.yaml
@@ -11,7 +11,7 @@ dlio:
     unit: "m" #m or frame
 
 o3d:
-  estimated_file: "open3d_slam_replayed_evo.tum"
+  estimated_file: "_open3d_slam_evo.tum"
   reference_file: "_jetson_ap20_robot_evo.tum"
   parameters:
     t_max_diff: 0.01
@@ -23,6 +23,39 @@ o3d:
 
 se:
   estimated_file: "_lpc_state_estimator_evo.tum"
+  reference_file: "_jetson_ap20_robot_evo.tum"
+  parameters:
+    t_max_diff: 0.0075
+    t_offset: 0.0
+    n_to_align: -1
+    correct_scale: False
+    delta: 1
+    unit: "m" #m or frame
+
+cpt7_ie:
+  estimated_file: "_cpt7_ie_tc_evo.tum"
+  reference_file: "_jetson_ap20_robot_evo.tum"
+  parameters:
+    t_max_diff: 0.001
+    t_offset: 0.0
+    n_to_align: -1
+    correct_scale: False
+    delta: 1
+    unit: "m" #m or frame
+
+gmsf:
+  estimated_file: "_gt_pose_evo.tum"
+  reference_file: "_jetson_ap20_robot_evo.tum"
+  parameters:
+    t_max_diff: 0.01
+    t_offset: 0.0
+    n_to_align: -1
+    correct_scale: False
+    delta: 1
+    unit: "m" #m or frame
+
+okviz_alphasense_2_bw:
+  estimated_file: "_okvis_alphasense_2_bw_evo.tum"
   reference_file: "_jetson_ap20_robot_evo.tum"
   parameters:
     t_max_diff: 0.01
