--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-.vscode
-.catkin_tools
 *.egg-info
 *.bag
+*.dae
+*.pdf
+*.PDF
+*.urdf
+*.mcap
+*_pb2_grpc.py
+*_pb2.py
 *__pycache__
+.vscode
+.catkin_tools
+.idea/
 wifi_config.ini
 .DS_Store
 box_utils/box_recording/data
 box_utils/box_mission_report/reports*
-*_pb2_grpc.py
-*_pb2.py
-box_model/box_model/urdf/box/box.urdf
 box_bringup/bringup_open3d_slam/data/maps/*
-.idea/
-box_model/box_model/urdf/box/mesh/box_colored_units.dae
-box_model/box_model/urdf/box/mesh/gps_colored_units.dae
-box_model/box_model/urdf/box/mesh/prism_colored_units.dae
