--- a/box_utils/box_auto/cfg/evo_dlio_ablation.yaml
+++ b/box_utils/box_auto/cfg/evo_dlio_ablation.yaml
@@ -1,5 +1,5 @@
 # The target sensor frame.
-target_frame: prism
+target_frame: cpt7_imu
 
 # If topic entry is left empty "", the bag only going to be used for /tf & /tf_static reading and not for topic reading
 bag_topic_pairs:
@@ -20,26 +20,8 @@ bag_topic_pairs:
       point_relation:
         reference_file: ""
     #
-  - bag: _cpt7_ie_tc.bag
-    test_name: "offline_ie"
-    topic: /gt_box/inertial_explorer/tc/odometry
-    frame: box_base
-    evaluations:
-      parameters:
-        t_max_diff: 0.001
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
-        reference_file: "gmsf_gt"
-      point_relation:
-        reference_file: "ap20_robot"
-
-    #
   - bag: _dlio.bag
-    test_name: "dlio_hesai"
+    test_name: "dlio_normal"
     topic: /dlio/lidar_map_odometry
     frame: hesai_lidar
     evaluations:
@@ -53,66 +35,11 @@ bag_topic_pairs:
       ape_rpe:
         reference_file: "gmsf_gt"
       point_relation:
-        reference_file: "ap20_robot"
+        reference_file: ""
 
-    #
-  - bag: _lpc_state_estimator.bag
-    test_name: "TSIF"
-    topic: /state_estimator/pose_in_odom
-    frame: base
-    evaluations:
-      parameters:
-        t_max_diff: 0.0075
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
-        reference_file: "gmsf_gt"
-      point_relation:
-        reference_file: "ap20_robot"
-
-    #
-  - bag: _jetson_zed2i_prop.bag
-    test_name: "zed2i_odom"
-    topic: /gt_box/zed2i/zed_node/odom
-    frame: zed_base_link
-    evaluations:
-      parameters:
-        t_max_diff: 0.01
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
-        reference_file: "gmsf_gt"
-      point_relation:
-        reference_file: "ap20_robot"
-
-    #
-  - bag: _jetson_zed2i_prop.bag
-    test_name: "zed2i_map"
-    topic: /gt_box/zed2i/zed_node/map_pose
-    frame: zed_base_link
-    evaluations:
-      parameters:
-        t_max_diff: 0.01
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
-        reference_file: "gmsf_gt"
-      point_relation:
-        reference_file: "ap20_robot"
-
-    #
-  - bag: _open3d_slam.bag
-    test_name: "o3d_with_tsif_hesai"
-    topic: /open3d_slam/optimized_poses_as_odometry
+  - bag: _dlio_offset_100_ns.bag
+    test_name: "dlio_100ns"
+    topic: /dlio/lidar_map_odometry
     frame: hesai_lidar
     evaluations:
       parameters:
@@ -125,43 +52,93 @@ bag_topic_pairs:
       ape_rpe:
         reference_file: "gmsf_gt"
       point_relation:
-        reference_file: "ap20_robot"
-
-    #
-  - bag: _okvis_imu0_alphasense_2_bw.bag
-    test_name: "okvis_alphasense_2_bw"
-    topic: /gt_box/okviz/pose
-    frame: cpt7_imu
-    evaluations:
-      parameters:
-        t_max_diff: 0.01
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
-        reference_file: "gmsf_gt"
-      point_relation:
-        reference_file: "ap20_robot"
-    #
-  - bag: _jetson_ap20_robot.bag
-    test_name: "ap20_robot"
-    topic: "/gt_box/ap20/prism_position"
-    frame: "prism"
-    evaluations:
-      parameters:
-        t_max_diff: 0.01
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
         reference_file: ""
-      point_relation:
+
+  - bag: _dlio_offset_1000_ns.bag
+    test_name: "dlio_1000ns"
+    topic: /dlio/lidar_map_odometry
+    frame: hesai_lidar
+    evaluations:
+      parameters:
+        t_max_diff: 0.01
+        t_offset: 0.0
+        n_to_align: -1
+        correct_scale: False
+        delta: 1
+        unit: "m" #m or frame
+      ape_rpe:
         reference_file: "gmsf_gt"
-    #
+      point_relation:
+        reference_file: ""
+
+  - bag: _dlio_offset_10000_ns.bag
+    test_name: "dlio_10000ns"
+    topic: /dlio/lidar_map_odometry
+    frame: hesai_lidar
+    evaluations:
+      parameters:
+        t_max_diff: 0.01
+        t_offset: 0.0
+        n_to_align: -1
+        correct_scale: False
+        delta: 1
+        unit: "m" #m or frame
+      ape_rpe:
+        reference_file: "gmsf_gt"
+      point_relation:
+        reference_file: ""
+
+  - bag: _dlio_extrinsic_x1mm_pitch1deg.bag
+    test_name: "dlio_x1mm"
+    topic: /dlio/lidar_map_odometry
+    frame: hesai_lidar
+    evaluations:
+      parameters:
+        t_max_diff: 0.01
+        t_offset: 0.0
+        n_to_align: -1
+        correct_scale: False
+        delta: 1
+        unit: "m" #m or frame
+      ape_rpe:
+        reference_file: "gmsf_gt"
+      point_relation:
+        reference_file: ""
+
+  - bag: _dlio_extrinsic_x10mm_pitch10deg.bag
+    test_name: "dlio_x10mm"
+    topic: /dlio/lidar_map_odometry
+    frame: hesai_lidar
+    evaluations:
+      parameters:
+        t_max_diff: 0.01
+        t_offset: 0.0
+        n_to_align: -1
+        correct_scale: False
+        delta: 1
+        unit: "m" #m or frame
+      ape_rpe:
+        reference_file: "gmsf_gt"
+      point_relation:
+        reference_file: ""
+
+  - bag: _dlio_extrinsic_x100mm_pitch30deg.bag
+    test_name: "dlio_x100mm"
+    topic: /dlio/lidar_map_odometry
+    frame: hesai_lidar
+    evaluations:
+      parameters:
+        t_max_diff: 0.01
+        t_offset: 0.0
+        n_to_align: -1
+        correct_scale: False
+        delta: 1
+        unit: "m" #m or frame
+      ape_rpe:
+        reference_file: "gmsf_gt"
+      point_relation:
+        reference_file: ""
+
   - bag: _tf_static.bag
     test_name: ""
     topic: ""
