--- a/box_utils/box_auto/cfg/evo_evaluations.yaml
+++ b/box_utils/box_auto/cfg/evo_evaluations.yaml
@@ -1,15 +1,27 @@
 # The target sensor frame.
-target_frame: cpt7_imu
+# AP20 do not have orientation so if we want to compare against that we have to convert to its sensor frame.
+target_frame: prism
+filter_by_covariance: False
+covariance_percentile_threshold: 95 #percentile
+#
+remove_until_motion: True
+distance_threshold: 1 #distance in meters
+#
+ap20_peak_rejection: True
+ap20_peak_rejection_threshold: 0.1 #second
+ap20_peak_rejection_trailing_window: 5 #trailing indices to remove
+#
+project_to_plane: "xyz" #xy or xyz
 
 # If topic entry is left empty "", the bag only going to be used for /tf & /tf_static reading and not for topic reading
 bag_topic_pairs:
   - bag: _gt_pose.bag
     test_name: "gmsf_gt"
-    topic: /gt_box/ground_truth/odometry
+    topic: /gt_box/ground_truth/pose_with_covariance
     frame: box_base
     evaluations:
       parameters:
-        t_max_diff: 0.01
+        t_max_diff: 0.005
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -18,15 +30,15 @@ bag_topic_pairs:
       ape_rpe:
         reference_file: ""
       point_relation:
-        reference_file: ""
+        reference_file: "ap20_robot"
     #
   - bag: _cpt7_ie_tc.bag
     test_name: "offline_ie"
-    topic: /gt_box/inertial_explorer/tc/odometry
+    topic: /gt_box/inertial_explorer/tc/gt_poses_novatel
     frame: box_base
     evaluations:
       parameters:
-        t_max_diff: 0.001
+        t_max_diff: 0.005
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -38,13 +50,31 @@ bag_topic_pairs:
         reference_file: "ap20_robot"
 
     #
+  - bag: _jetson_ap20_robot.bag
+    test_name: "ap20_robot"
+    topic: "/gt_box/ap20/prism_position"
+    frame: "prism"
+    evaluations:
+      parameters:
+        t_max_diff: 0.025
+        t_offset: 0.0
+        n_to_align: -1
+        correct_scale: False
+        delta: 1
+        unit: "m" #m or frame
+      ape_rpe:
+        reference_file: ""
+      point_relation:
+        reference_file: "ap20_robot"
+
+    #
   - bag: _dlio.bag
     test_name: "dlio_hesai"
     topic: /dlio/lidar_map_odometry
     frame: hesai_lidar
     evaluations:
       parameters:
-        t_max_diff: 0.01
+        t_max_diff: 0.1
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -62,7 +92,7 @@ bag_topic_pairs:
     frame: base
     evaluations:
       parameters:
-        t_max_diff: 0.0075
+        t_max_diff: 0.00125
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -80,7 +110,7 @@ bag_topic_pairs:
     frame: zed_base_link
     evaluations:
       parameters:
-        t_max_diff: 0.01
+        t_max_diff: 0.025
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -98,7 +128,7 @@ bag_topic_pairs:
     frame: zed_base_link
     evaluations:
       parameters:
-        t_max_diff: 0.01
+        t_max_diff: 0.025
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -116,7 +146,7 @@ bag_topic_pairs:
     frame: hesai_lidar
     evaluations:
       parameters:
-        t_max_diff: 0.01
+        t_max_diff: 0.05
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -134,7 +164,7 @@ bag_topic_pairs:
     frame: cpt7_imu
     evaluations:
       parameters:
-        t_max_diff: 0.01
+        t_max_diff: 0.05
         t_offset: 0.0
         n_to_align: -1
         correct_scale: False
@@ -144,23 +174,6 @@ bag_topic_pairs:
         reference_file: "gmsf_gt"
       point_relation:
         reference_file: "ap20_robot"
-    #
-  - bag: _jetson_ap20_robot.bag
-    test_name: "ap20_robot"
-    topic: "/gt_box/ap20/prism_position"
-    frame: "prism"
-    evaluations:
-      parameters:
-        t_max_diff: 0.01
-        t_offset: 0.0
-        n_to_align: -1
-        correct_scale: False
-        delta: 1
-        unit: "m" #m or frame
-      ape_rpe:
-        reference_file: ""
-      point_relation:
-        reference_file: "gmsf_gt"
     #
   - bag: _tf_static.bag
     test_name: ""
