--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -139,21 +139,13 @@ services:
 
 
   # Input:
-  # - _nuc_alphasense_calib.bag
-  # - _jetson_hdr_left_calib.bag
-  # - _jetson_hdr_front_calib.bag
-  # - _jeston_hdr_right_calib.bag
-  # - _jetson_zed2i_images_calib.bag
+  # - ... check in script
   # Output:
-  # - _nuc_alphasense_anonymized.bag
-  # - _jetson_hdr_left_anonymized.bag
-  # - _jetson_hdr_front_anonymized.bag
-  # - _jeston_hdr_right_anonymized.bag
-  # - _jetson_zed2i_images_anonymized.bag
+  # - ..._anonymized.bag
   image_anonymizer:
     <<: *common-config
     container_name: image_anonymizer
-    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/anonymize_images.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/ego_blur.py"]
     depends_on:
       calibration:
         condition: service_completed_successfully
