--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ wifi_config.ini
 box_utils/box_recording/data
 box_utils/box_mission_report/reports*
 box_bringup/bringup_open3d_slam/data/maps/*
+box_utils/box_auto/compose/*_local.yaml
